refactor: Use java 17 feature, syntax